# doodles

./: LICENSE
GPUConvolution/: Makefile  README.md  lab1.txt
GPUConvolution/src/: blur.cpp  blur.cu
LDAFromScratch/: LDAFromScratch.ipynb
LoadDL/: CMakeLists.txt  README.md  dl.hpp  function.cpp  function.hpp  main.cpp
PythonExtension/: README.md  accumulate.cpp  accumulate.hpp  setup.py  test_accumulate.py
